# fall2023

./: _config.yml  test.js
_includes/: head.html  header.html  navigation.html  page_title.html  schedule-very-simple.html
_layouts/: assignments.html  schedule.html  syllabus.html
_sass/minima/: _assignments.scss  _base.scss  _tables.scss
course-files/labs/lab05/: README.md
course-files/labs/lab05/src/: pyproject.toml  server.py  test_server.py
pages/: resources.md  syllabus.md
pages/_activities/: background-images.md  final-html-css.md  final-javascript.md  final.md  github-activity.md  intro-css.md  keyframes.md  practice-quiz01.md  practice-quiz02.md  quiz01.md  quiz02.md  transitions.md
pages/_assignments/: hw01.md  hw02.md  hw03.md  hw04.md  hw05.md  hw06.md  hw07.md  lab01.md  lab02.md  lab03.md  lab04.md  lab05.md  lab06.md  lab07.md  lab08.md  lab09.md  lab10.md  lab11.md  lab12.md  p1.md  p2.md  p3.md  tutorial01.md  tutorial02.md  tutorial03.md  tutorial04.md  tutorial05.md  tutorial06.md  tutorial07.md  tutorial08.md  tutorial09.md  tutorial10.md
pages/_assignments/draft/: hw01.md  hw02.md  hw05.md  hw06.md  hw2.md  hw3.md  hw4.md  (+14 more)
pages/_lectures/: deadline01.md  deadline02.md  final_exam.md  holiday01.md  holiday02.md  holiday03.md  holiday04.md  topic01.md  topic02.md  topic03.md  topic04.md  topic05.md  topic06.md  topic07.md  topic08.md  topic09.md  topic10.md  topic11.md  topic12.md  topic13.md  topic14.md
pages/_quizzes/: quiz_01.md  quiz_02.md  quiz_03.md
pages/_resources/: command_line.md  emacs.md  github.md  vim.md  vs_code.md
(+12 files in other folders)
