[tool.poetry]
name = "csci338app"
version = "0.0.0"
description = "App for CSCI338"
authors = ["Semmy Purewal <semmypurewal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
